force-app/main/default/objects/Complaint__c/fields/Assigned_Staff__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Staff__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Staff</label>
    <referenceTo>Staff__c</referenceTo>
    <relationshipLabel>Complaints</relationshipLabel>
    <relationshipName>Complaints</relationshipName>
    <type>Lookup</type>
</CustomField>