force-app/main/default/objects/Complaint__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Electrical</fullName>
            </value>
            <value>
                <fullName>Plumbing</fullName>
            </value>
            <value>
                <fullName>Cleaning</fullName>
            </value>
            <value>
                <fullName>WiFi</fullName>
            </value>
            <value>
                <fullName>Water Leakage</fullName>
            </value>
            <value>
                <fullName>Furniture</fullName>
            </value>
            <value>
                <fullName>Food Quality</fullName>
            </value>
            <value>
                <fullName>Mess Hygiene</fullName>
            </value>
            <value>
                <fullName>Fee Related</fullName>
            </value>
            <value>
                <fullName>Visitor Issue</fullName>
            </value>
            <value>
                <fullName>Security Issue</fullName>
            </value>
            <value>
                <fullName>Hostel Rules</fullName>
            </value>
            <value>
                <fullName>Room Allocation</fullName>
            </value>
            <value>
                <fullName>General Complaint</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>