force-app/main/default/objects/Complaint__c/fields/Complaint__c.field-meta.xml
<CustomField>
    <fullName>Complaint__c</fullName>
    <label>Complaint</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>