force-app/main/default/objects/Complaint__c/fields/Complaint_Date__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Date__c</fullName>
    <label>Complaint Date</label>
    <type>Date</type>
</CustomField>