force-app/main/default/objects/Complaint__c/fields/Complaint_ID__c.field-meta.xml
<CustomField>
    <fullName>Complaint_ID__c</fullName>
    <displayFormat>CMP ID-{0000}</displayFormat>
    <label>Complaint ID</label>
    <type>AutoNumber</type>
</CustomField>