force-app/main/default/objects/Complaint__c/fields/Complaint_Type__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Type__c</fullName>
    <label>Complaint Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bus Delay</fullName>
            </value>
            <value>
                <fullName>Driver Behavior</fullName>
            </value>
            <value>
                <fullName>Bus Breakdown</fullName>
            </value>
            <value>
                <fullName>Cleanliness Issue</fullName>
            </value>
            <value>
                <fullName>Overcrowding</fullName>
            </value>
            <value>
                <fullName>Route Issue</fullName>
            </value>
            <value>
                <fullName>Safety Issue</fullName>
            </value>
            <value>
                <fullName>Lost &amp; Found</fullName>
            </value>
            <value>
                <fullName>Bus Pass Issue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>